--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-BR">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -10,7 +10,7 @@
     <nav class="menu">
         <ul>
             <li><a href="#animais">Animais</a></li>
-            <li><a href="#faq">faq</a></li>
+            <li><a href="#faq">Faq</a></li>
             <li><a href="#contato">Contato</a></li>
             <li><a href="#">Dev</a></li>
         </ul>
