Atualiza estilos e corrige texto da seção FAQ para "Perguntas Frequentes"

--- a/index.html
+++ b/index.html
@@ -5,14 +5,14 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <title>Animais Fantásticos</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link href="https://fonts.googleapis.com/css?family=Playfair+Display+SC" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Playfair+Display+SC&family=IBM+Plex+Mono:wght@400;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" type="text/css" href="css/styles.css" />
 </head>
 <body>
   <nav class="menu">
     <ul>
       <li><a href="#animais">Animais</a></li>
-      <li><a href="#faq">Faq</a></li>
+      <li><a href="#faq">Perguntas Frenquentes</a></li>
       <li><a href="#contato">Contato</a></li>
       <li><a href="#">Dev →</a></li>
     </ul>
